# GraphicProject

./: CMakeLists.txt  README.md
source/headers/: ServiceGLEnum.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h  glad.h  my_glad_configure_functions.h
source/src/: ServiceGLEnum.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  glad.c  main.cpp  my_glad_configure_functions.cpp  stb_image_implementation.cpp
